WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138410
Fix build warning in WebKit2/WebProcess module
https://bugs.webkit.org/show_bug.cgi?id=138410
Summary
Fix build warning in WebKit2/WebProcess module
Shivakumar J M
Reported
2014-11-05 00:41:34 PST
Fix build warning caused by
https://bugs.webkit.org/show_bug.cgi?id=138388
[4468/5021] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/Network/NetworkProcessConnection.cpp.o In file included from DerivedSources/WebKit2/include/WebKit/WebPageOverlay.h:1:0, from ../../Source/WebKit2/WebProcess/InjectedBundle/API/c/WKBundlePageOverlay.cpp:40: ../../Source/WebKit2/WebProcess/WebPage/WebPageOverlay.h:53:22: warning: unused parameter ‘userData’ [-Wunused-parameter] virtual bool prepareForActionMenu(WebPageOverlay&, RefPtr<API::Object>& userData) { return false; } ^ [4469/5021] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/Plugins/PluginProcessConnectionManager.cpp.o [4470/5021] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/Network/WebResourceLoadScheduler.cpp.o [4471/5021] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/InjectedBundle/DOM/InjectedBundleRangeHandle.cpp.o In file included from ../../Source/WebKit2/WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:50:0: ../../Source/WebKit2/WebProcess/WebPage/WebPageOverlay.h:53:22: warning: unused parameter ‘userData’ [-Wunused-parameter] virtual bool prepareForActionMenu(WebPageOverlay&, RefPtr<API::Object>& userData) { return false; } ^
Attachments
Patch
(1.77 KB, patch)
2014-11-05 00:49 PST
,
Shivakumar J M
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shivakumar J M
Comment 1
2014-11-05 00:49:39 PST
Created
attachment 241008
[details]
Patch Fix build warning by removing parameter name
WebKit Commit Bot
Comment 2
2014-11-05 02:01:20 PST
Comment on
attachment 241008
[details]
Patch Clearing flags on attachment: 241008 Committed
r175616
: <
http://trac.webkit.org/changeset/175616
>
WebKit Commit Bot
Comment 3
2014-11-05 02:01:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug