Fix build warning in WebKit2/WebProcess module. https://bugs.webkit.org/show_bug.cgi?id=138410

Patch by Shivakumar JM <shiva.jm@samsung.com> on 2014-11-05
Reviewed by Alexey Proskuryakov.

Fix build warning by removing parameter name

* WebProcess/WebPage/WebPageOverlay.h:
(WebKit::WebPageOverlay::Client::prepareForActionMenu):

Canonical link: https://commits.webkit.org/156236@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175616 268f45cc-cd09-0410-ab3c-d52691b4dbfc